[workspace]
members = [
    "eight",
    "eighteen",
    "eleven",
    "fifteen",
    "five",
    "four",
    "fourteen",
    "nine",
    "nineteen",
    "one",
    "seven",
    "seventeen",
    "six",
    "sixteen",
    "support/advent",
    "support/advent_macro",
    "support/parse",
    "support/parse_macro",
    "ten",
    "thirteen",
    "three",
    "twelve",
    "twenty",
    "twenty-one",
    "two",
]
resolver = "2"

[workspace.dependencies]
combine = "4.6.7"

[workspace.dependencies.advent]
path = "support/advent"

[workspace.dependencies.advent_macro]
path = "support/advent_macro"

[workspace.dependencies.parse]
path = "support/parse"

[workspace.dependencies.parse_macro]
path = "support/parse_macro"
